--- a/src/main/frontend/src/app/components/main/app.component.html
+++ b/src/main/frontend/src/app/components/main/app.component.html
@@ -1,5 +1,5 @@
-<div class="component-container">
-    <h1>Test Application</h1>
-    <app-router></app-router>
-    <app-footer></app-footer>
+<div>
+    <h1 class="bg-primary">Welcome Foo</h1>
+    <h2>{{ date | date:'hh:mm a' }}</h2>
+    <router-outlet></router-outlet>
 </div>
